--- a/views/ch-1.ejs
+++ b/views/ch-1.ejs
@@ -3,45 +3,28 @@
   <head>
     <title>One</title>
     
-    <% include include/game.ejs %>    
+    <% include include/basic.ejs %>    
  
-    <script>  
+    <script>            
       
-      function userScriptLoaded() {
-        keyPressed (function (keyCode) {
-          if ( keyCode == 'LEFT' ) {
-            player.moveLeft()
-          } 
-          if ( keyCode == 'RIGHT' ) {
-            player.moveRight()
-          } 
-          if ( keyCode == 'UP' ) {
-            player.moveUp()
-          } 
-          if ( keyCode == 'DOWN' ) {
-            player.moveDown()
-          }  
-          keyPressedEvent(keyCode)
-       
-        })
-        createEmptyMaze(10, 6)
-        addWall(1, 2)
-        addWall(2, 2)
-        addWall(3, 2)
-        addWall(3, 3)
-        addWall(3, 4)
-        addWall(3, 5)
-        addGoal()
-        addPlayer()
-      } 
-            
+      function restart() {
+        document.location.reload()
+      }
       
-        // Load the user blockly script
-        loadUserScript('/js/ch-1.js')
+      function output(msg, noWrap) {
+        document.body.innerHTML += msg
+        if(typeof noWrap != undefined && noWrap) document.body.innerHTML += '<br>'
+      }
+
+      // Load the user blockly script
+      loadUserScript('/js/ch-1.js')
+      
     </script>
     
   </head>
-  <body>
-    <div id="game"></div>
+  <body style="font-family:courier; font-color:#444444">
+    <div>
+      <button id="reload" style="margin-bottom:5px" onclick="restart()">Reload</button>        
+    </div>
   </body>
 </html>
