--- a/views/ch-2.ejs
+++ b/views/ch-2.ejs
@@ -3,61 +3,28 @@
   <head>
     <title>One</title>
     
-    <% include include/game.ejs %>    
+    <% include include/basic.ejs %>    
  
-    <script>  
-
-        function checkWall(where) {
-          var x = player.x
-          var y = player.y
-          var hit = false
-
-          switch (where.toUpperCase()) {
-            case 'L':
-              if ( tiles[x-1][y].type == 'wall') {
-                hit = true
-              }
-              break
-            case 'R':
-              if ( tiles[x+1][y].type == 'wall') {
-                hit = true
-              }
-              break
-            case 'U':
-              if ( tiles[x][y-1].type == 'wall') {
-                hit = true
-              }
-              break
-            case 'D':
-              if ( tiles[x][y+1].type == 'wall') {
-                hit = true
-              }
-              break
-          }
-          return hit
-        }       
+    <script>            
       
-      function userScriptLoaded() {
-       
-        keyPressed (function (keyCode) {
-          keyPressedEvent(keyCode)       
-        })        
-        createEmptyMaze(12, 8)
-        addWall(1,1)
-        addWall(4,2)
-        addWall(6,2)
-        addWall(5,5)
-        addGoal()
-        addPlayer()
-      } 
-            
+      function restart() {
+        document.location.reload()
+      }
       
-        // Load the user blockly script
-        loadUserScript('/js/ch-2.js')
+      function output(msg, noWrap) {
+        document.body.innerHTML += msg
+        if(typeof noWrap != undefined && noWrap) document.body.innerHTML += '<br>'
+      }
+
+      // Load the user blockly script
+      loadUserScript('/js/ch-2.js')
+      
     </script>
     
   </head>
-  <body>
-    <div id="game"></div>
+  <body style="font-family:courier; font-color:#444444">
+    <div>
+      <button id="reload" style="margin-bottom:5px" onclick="restart()">Reload</button>        
+    </div>
   </body>
 </html>
