--- a/views/js-2.ejs
+++ b/views/js-2.ejs
@@ -14,6 +14,7 @@
         gameStarted (initGame)
         //endOfTurn(initGame)
         createRandomMaze(12, 8)
+        setMessageFontScale(0.75);           
       }       
       
         // Load the user blockly script
